examples/invalid/error_semantico2.cpp
int sumar(int a, int b) {
  return a + b;
}

int main() {
  int x;
  double d;

  x = 3.14;          // asignacion incompatible
  d = sumar(TRUE, 2); // tipo de argumento invalido

  break; // break fuera de bucle

  return 0;
}
